# DronecodeSDK

./: HOWTO.txt  install_simulator.sh
KnightsOfNyquist/example1/: CMakeLists.txt  compile.sh  example1.cpp
KnightsOfNyquist/record_points/: CMakeLists.txt  record_points.cpp
backend/cmake/: MacOSXFrameworkInfo.plist.in
integration_tests/: CMakeLists.txt
